--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
 
 
     </div>
+    <div class="cricket">
+        <img class="bat" src="images/bat.png" alt="">
+        <div class="ball"></div>
+    </div>
 
 </body>
 
